--- a/main.html
+++ b/main.html
@@ -8,6 +8,26 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+
+<div>
+    <h3>What is the capital of India?</h3>
+ <form action="">
+        <input type="radio" name="Delhi" id="Delhi" />
+
+        <label for="New Delhi">New Delhi</label> <br />
+
+        <input type="radio" name="Mumbai" id="Mumbai" />
+		
+        <label for="Mumbai">Mumbai</label>
+ </form>
+      <blockquote cite="https://en.wikipedia.org/wiki/New_Delhi">
+
+        New Delhi is the capital of India and an administrative district of NCT
+        Delhi.
+
+      </blockquote>
+</div>
+
     <script type="text/javascript" src="./script.js">
 </script>
 
